--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
+<div class="center">
+  <strong>Coming soon. Stay tuned :)</strong>
+</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<center><strong>Coming soon.
-  <p>Stay tuned :)</strong></p></center>
+.center{
+    position:absolute;
+    height: X px;
+    width: Y px;
+    left:50%;
+    top:50%;
+    margin-top:- X/2 px;
+    margin-left:- Y/2 px;
+}
